--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-architect
 title: "DEERGAMES"
-description: "Mobil oyun ve uygulamalar sunan yenilikçi yaklaşım."
+description: "Yenilikçi ve Eğlenceli mobil oyun ve uygulamalar sunar."
