--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-architect
 title: "DEERGAMES"
-description: "Yenilikçi ve Eğlenceli mobil oyun ve uygulamalar sunar."
+description: "Yenilikçi ve Eğlenceli mobil oyun ve uygulamalar geliştiriyoruz."
